Fixing desciption collapse/expand

--- a/component/app/styles/sections/_community.scss
+++ b/component/app/styles/sections/_community.scss
@@ -123,25 +123,25 @@ Community Statistics
 
 @include media-breakpoint-up(md) {
     .hideFilter {
-        top: -10% !important;
+        top: -18% !important;
     }
 }
 
 @include media-breakpoint-up(lg) {
     .hideFilter {
-        top: -12% !important;
+        top: -15% !important;
     }
 }
 
 @include media-breakpoint-up(xl) {
     .hideFilter {
-        top: -18% !important;
+        top: -19% !important;
     }
 }
 
 @media (min-width: 1367px) {
     .hideFilter {
-        top: -17% !important;
+        top: -21% !important;
     }
 
     .add-chart span {
